--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 .idea
 
 # Build
-okexchaind
-okexchaincli
+fastock-chain-daemon
+fastock-chain-cli
 vendor
 build
 tools/
@@ -25,18 +25,14 @@ doc
 # Data - ideally these don't exist
 baseapp/data/*
 client/lcd/keys/*
-cmd/okexchaincli/statik/statik.go
 mytestnet
 doc/statik/statik.go
 dev/cache
 cmd/launch/launch
-cmd/okexchaincli/okexchaincli
-cmd/okexchaind/okexchaind
-cmd/okexchaintool/okexchaintool
+cmd/fastock-chain-cli/fastock-chain-cli
+cmd/fastock-chain-daemon/fastock-chain-daemon
 cmd/tiger/tiger
-cmd/okexchaind/testnet_okchain.go
 dev/testnet/cache
-testnet_okexchain.go
 tools
 
 
